# companyos

./: .dockerignore  .gitignore  Blog.md  Dockerfile  README.md  __init__.py  client.py  docker-compose.yaml  models.py  openenv.yaml  pyproject.toml
apps/: __init__.py  approvalflow.py  datahub.py  ticketdesk.py
env/: __init__.py  company_env.py  task_generator.py
server/: __init__.py  main.py
spaces/: app.py
tests/: test_env.py
training/: random_baseline.py  train.ipynb
