[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "companyos"
version = "0.1.0"
description = "Enterprise Workflow RL Environment — OpenEnv compliant"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
train = [
    "trl>=0.8",
    "unsloth",
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.18",
    "wandb",
    "matplotlib",
]
dev = [
    "pytest",
    "httpx",   # for FastAPI test client
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "env*", "server*"]